--- a/src/compare.html
+++ b/src/compare.html
@@ -6,13 +6,11 @@
 <!--     <script src='https://unpkg.com/panzoom@9.4.0/dist/panzoom.min.js'></script> -->
   </head>
   <body>
-    <div class='style1'>style1</div>
-    <div class='style2'>style2</div>
-    <div class='style3'>style3</div>
+    <div id="div_curObjN">-</div>
     <div id="div_n_medias_cont">
     </div>
     
-    <div id="div_vid_ctrls">
+    <div id="div_vid_ctrls" hidden>
         <button id="btn_play_pause">
           <span id="btn_play_pause_play">▶</span>
           <span id="btn_play_pause_pause">⏸</span>
