--- a/src/compare.html
+++ b/src/compare.html
@@ -10,18 +10,19 @@
     <div id="div_n_medias_cont">
     </div>
     
-    <div id="div_vid_ctrls" hidden>
+    <div id="div_vid_ctrls" >
         <button id="btn_play_pause">
           <span id="btn_play_pause_play">▶</span>
+         / 
           <span id="btn_play_pause_pause">⏸</span>
         </button>
-        <button id="btn_prev_frame" title="Previous frame">‹</button>
+<!--        <button id="btn_prev_frame" title="Previous frame">‹</button>
         <button id="btn_next_frame" title="Next frame">›</button>
         <progress id="vid_prog" value="0" min="0" max="20000"></progress>
         <span id="span_vid_vol" style="">
           🔉
           <progress id="vid_vol" style="max-width: 70px;" value="100" min="0" max="100"></progress>
-        </span>
+        </span>-->
     </div>
     
   </body>
