--- a/src/compare.html
+++ b/src/compare.html
@@ -9,8 +9,12 @@
     <div class='style2'>style2</div>
     <div class='style3'>style3</div>
     <div id="div_n_medias_cont">
-      <img class="cmp_img" n="1" src="examples/worthlove.jpg" />
-      <img class="cmp_img" n="2" src="examples/worthlove.webp" />
+      <div class="cmp_div" n="1">
+        <img class="cmp_img" n="1" src="examples/11.webp" />
+      </div>
+      <div class="cmp_div" n="2">
+        <img class="cmp_img" n="2" src="examples/22.webp" />
+      </div>
     </div>
   </body>
 </html>
