--- a/src/compare.html
+++ b/src/compare.html
@@ -8,5 +8,9 @@
     <div class='style1'>style1</div>
     <div class='style2'>style2</div>
     <div class='style3'>style3</div>
+    <div id="div_n_medias_cont">
+      <img class="cmp_img" n="1" src="examples/worthlove.jpg" />
+      <img class="cmp_img" n="2" src="examples/worthlove.webp" />
+    </div>
   </body>
 </html>
