--- a/src/compare.html
+++ b/src/compare.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>imvComp</title>
+<!--     <script src='https://unpkg.com/panzoom@9.4.0/dist/panzoom.min.js'></script> -->
   </head>
   <body>
     <div class='style1'>style1</div>
