初步尝试webpack成功

--- a/src/compare.html
+++ b/src/compare.html
@@ -5,6 +5,8 @@
     <title>imvComp</title>
   </head>
   <body>
-    
+    <div class='style1'>style1</div>
+    <div class='style2'>style2</div>
+    <div class='style3'>style3</div>
   </body>
 </html>
